# fastq-split

./: .gitignore  Cargo.toml
src/: main.rs
